Fix some layout issues on small screens

--- a/preview/src/components/checkbox/style.css
+++ b/preview/src/components/checkbox/style.css
@@ -1,6 +1,6 @@
 #tos-check {
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
     margin: 8px 16px;
     color: var(--text-color);
     background-color: var(--background-color);
