--- a/preview/src/components/progress/style.css
+++ b/preview/src/components/progress/style.css
@@ -3,7 +3,7 @@
     overflow: hidden;
     background: var(--brighter-background-color);
     border-radius: 9999px;
-    width: 300px;
+    width: 200px;
     height: 20px;
     border: 2px solid var(--dim-border-color);
     box-sizing: border-box;
